--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "request": "^2.55.0",
     "supervisor": "^0.6.0",
     "swig": "^1.4.1",
-    "winston": "^0.7.3"
+    "winston": "^0.7.3",
+    "ngstorage": "*"
   },
   "devDependencies": {
     "chai-as-promised": "^4.1.1",
