--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "protractor": "^1.5.0"
   },
   "scripts": {
-    "test": "./tests/e2e/v2/travis.sh",
+    "test": "./tests/tools/travis.sh",
     "start": "supervisor --watch 'build/' -- build/server/server.js",
     "install": "node node_modules/protractor/bin/webdriver-manager update"
   }
